--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "next build",
     "db:push": "prisma db push",
     "db:studio": "prisma studio",
+    "db:dev": "docker-compose up -d && prisma migrate dev",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
